--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -6,7 +6,7 @@
       "name": "01_intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOknXwOFvjleapz6NY2RQse",
+      "authorship_tag": "ABX9TyOZ9VqyXoeMheuFaflRH01m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,6 +15,256 @@
     },
     "language_info": {
       "name": "python"
+    },
+    "accelerator": "GPU",
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "9c90e6b52c444e59855cea90e2a0a06b": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "state": {
+            "_view_name": "HBoxView",
+            "_dom_classes": [],
+            "_model_name": "HBoxModel",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "box_style": "",
+            "layout": "IPY_MODEL_a33a9163c4914c7892f07fed7fcf70cf",
+            "_model_module": "@jupyter-widgets/controls",
+            "children": [
+              "IPY_MODEL_d6211b752ee8491095779733f2ec34d2",
+              "IPY_MODEL_96e96444fefa444c979280cea175ddc4"
+            ]
+          }
+        },
+        "a33a9163c4914c7892f07fed7fcf70cf": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "d6211b752ee8491095779733f2ec34d2": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "state": {
+            "_view_name": "ProgressView",
+            "style": "IPY_MODEL_1b5f8746df42409f8d2b88cfc08d98fc",
+            "_dom_classes": [],
+            "description": "100%",
+            "_model_name": "FloatProgressModel",
+            "bar_style": "success",
+            "max": 87306240,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 87306240,
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "orientation": "horizontal",
+            "min": 0,
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_2372e22d86b842328cacc216c98a31ec"
+          }
+        },
+        "96e96444fefa444c979280cea175ddc4": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "state": {
+            "_view_name": "HTMLView",
+            "style": "IPY_MODEL_f9969b1358b449e9b28696e97ea402eb",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "HTMLModel",
+            "placeholder": "​",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": " 83.3M/83.3M [00:03&lt;00:00, 25.3MB/s]",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_a70967e1676c4788bea1c74d4b25fa8e"
+          }
+        },
+        "1b5f8746df42409f8d2b88cfc08d98fc": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "ProgressStyleModel",
+            "description_width": "initial",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "bar_color": null,
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "2372e22d86b842328cacc216c98a31ec": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "f9969b1358b449e9b28696e97ea402eb": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "DescriptionStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "a70967e1676c4788bea1c74d4b25fa8e": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
     }
   },
   "cells": [
@@ -29,17 +279,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CvxThcIP7q1Z"
+      },
+      "source": [
+        "### Note: This intrductory example works with CPU *-only-* if stored in Google drive and is extremely slow. If the notebook is accessed from git then, it works with GPU and is pretty fast."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Y00tnOu7h6F4"
+        "id": "Y00tnOu7h6F4",
+        "outputId": "dedd51c3-e2c9-4511-88b3-53ee1342064b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install -Uqq fastbook\n",
         "import fastbook\n",
         "fastbook.setup_colab()"
       ],
-      "execution_count": 9,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 727kB 34.1MB/s \n",
+            "\u001b[K     |████████████████████████████████| 204kB 51.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 51kB 8.0MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.2MB 38.9MB/s \n",
+            "\u001b[K     |████████████████████████████████| 61kB 8.4MB/s \n",
+            "\u001b[K     |████████████████████████████████| 61kB 9.9MB/s \n",
+            "\u001b[?25hMounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -49,7 +326,7 @@
       "source": [
         "from fastbook import *"
       ],
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -60,7 +337,7 @@
       "source": [
         "from fastai.vision.all import *"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -69,9 +346,19 @@
         "id": "UXalef4simcm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 94
+          "height": 202,
+          "referenced_widgets": [
+            "9c90e6b52c444e59855cea90e2a0a06b",
+            "a33a9163c4914c7892f07fed7fcf70cf",
+            "d6211b752ee8491095779733f2ec34d2",
+            "96e96444fefa444c979280cea175ddc4",
+            "1b5f8746df42409f8d2b88cfc08d98fc",
+            "2372e22d86b842328cacc216c98a31ec",
+            "f9969b1358b449e9b28696e97ea402eb",
+            "a70967e1676c4788bea1c74d4b25fa8e"
+          ]
         },
-        "outputId": "a2499237-002f-4d6f-d2bb-b456484b1025"
+        "outputId": "31d5702a-678b-4907-a084-1da6117072e3"
       },
       "source": [
         "\n",
@@ -86,30 +373,56 @@
         "learn = cnn_learner(dls, resnet34, metrics=error_rate)\n",
         "learn.fine_tune(1)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "\n",
-              "    <div>\n",
-              "        <style>\n",
-              "            /* Turns off some styling */\n",
-              "            progress {\n",
-              "                /* gets rid of default border in Firefox and Opera. */\n",
-              "                border: none;\n",
-              "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-              "                background-size: auto;\n",
-              "            }\n",
-              "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-              "                background: #F44336;\n",
-              "            }\n",
-              "        </style>\n",
-              "      <progress value='0' class='' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      0.00% [0/1 00:00<00:00]\n",
-              "    </div>\n",
-              "    \n",
+              ""
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet34-333f7ec4.pth\" to /root/.cache/torch/hub/checkpoints/resnet34-333f7ec4.pth\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "9c90e6b52c444e59855cea90e2a0a06b",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "HBox(children=(FloatProgress(value=0.0, max=87306240.0), HTML(value='')))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr style=\"text-align: left;\">\n",
@@ -121,26 +434,48 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>0.160235</td>\n",
+              "      <td>0.023023</td>\n",
+              "      <td>0.008119</td>\n",
+              "      <td>00:47</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
-              "</table><p>\n",
-              "\n",
-              "    <div>\n",
-              "        <style>\n",
-              "            /* Turns off some styling */\n",
-              "            progress {\n",
-              "                /* gets rid of default border in Firefox and Opera. */\n",
-              "                border: none;\n",
-              "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-              "                background-size: auto;\n",
-              "            }\n",
-              "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-              "                background: #F44336;\n",
-              "            }\n",
-              "        </style>\n",
-              "      <progress value='47' class='' max='92' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      51.09% [47/92 11:17<10:48 0.4125]\n",
-              "    </div>\n",
-              "    "
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: left;\">\n",
+              "      <th>epoch</th>\n",
+              "      <th>train_loss</th>\n",
+              "      <th>valid_loss</th>\n",
+              "      <th>error_rate</th>\n",
+              "      <th>time</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>0.066118</td>\n",
+              "      <td>0.022486</td>\n",
+              "      <td>0.005413</td>\n",
+              "      <td>00:57</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -160,7 +495,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
