--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -6,7 +6,7 @@
       "name": "01_intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOX9J60dwICK7eHYUTecCRR",
+      "authorship_tag": "ABX9TyPGlE02ABTp+r8e6Yeo4dNT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -603,8 +603,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jxIo3CuOB_4h",
-        "outputId": "7241b7fa-01c5-41e0-d0f2-067ffcd2f8af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -613,7 +611,9 @@
             "cc1f0f6f3c49497db5b7fb52073a1163",
             "d5d6d50f2e5f4654b847823ea2db51ba"
           ]
-        }
+        },
+        "id": "jxIo3CuOB_4h",
+        "outputId": "7241b7fa-01c5-41e0-d0f2-067ffcd2f8af"
       },
       "source": [
         "uploader"
@@ -641,12 +641,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mgWwBcSBCFgk",
-        "outputId": "a4c24471-db78-4298-a9ea-07d253dc3e56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 566
-        }
+        },
+        "id": "mgWwBcSBCFgk",
+        "outputId": "a4c24471-db78-4298-a9ea-07d253dc3e56"
       },
       "source": [
         "img = PILImage.create(uploader.data[0])\n",
@@ -672,12 +672,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2JzWEOLjDZnV",
-        "outputId": "6efef48b-0c6e-46ca-9ed3-c864a16edbff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        }
+        },
+        "id": "2JzWEOLjDZnV",
+        "outputId": "6efef48b-0c6e-46ca-9ed3-c864a16edbff"
       },
       "source": [
         "is_cat,_,probs = learn.predict(img)\n",
@@ -709,6 +709,88 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6DRhck1KJo00"
+      },
+      "source": [
+        "#### How to look up documentation about functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "46vDvQn0JMQ7",
+        "outputId": "6a216732-a10d-45bb-bb83-4ab245e65818",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "untar_data"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function fastai.data.external.untar_data>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uxPmnxYnJNc5",
+        "outputId": "12d1d257-01d7-4664-fa84-fe76ed002b84",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
+      },
+      "source": [
+        "doc(ImageDataLoaders.from_name_func)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h4 id=\"ImageDataLoaders.from_name_func\" class=\"doc_header\"><code>ImageDataLoaders.from_name_func</code><a href=\"https://github.com/fastai/fastai/tree/master/fastai/vision/data.py#L114\" class=\"source_link\" style=\"float:right\">[source]</a></h4><blockquote><p><code>ImageDataLoaders.from_name_func</code>(<strong><code>path</code></strong>, <strong><code>fnames</code></strong>, <strong><code>label_func</code></strong>, <strong><code>valid_pct</code></strong>=<em><code>0.2</code></em>, <strong><code>seed</code></strong>=<em><code>None</code></em>, <strong><code>item_tfms</code></strong>=<em><code>None</code></em>, <strong><code>batch_tfms</code></strong>=<em><code>None</code></em>, <strong><code>bs</code></strong>=<em><code>64</code></em>, <strong><code>val_bs</code></strong>=<em><code>None</code></em>, <strong><code>shuffle</code></strong>=<em><code>True</code></em>, <strong><code>device</code></strong>=<em><code>None</code></em>)</p>\n",
+              "</blockquote>\n",
+              "<p>Create from the name attrs of <code>fnames</code> in <code>path</code>s with <code>label_func</code></p>\n",
+              "<p><a href=\"https://docs.fast.ai/vision.data#ImageDataLoaders.from_name_func\" target=\"_blank\" rel=\"noreferrer noopener\">Show in docs</a></p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-8afxeJXJmQL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
