--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -6,7 +6,7 @@
       "name": "01_intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOrRc4Xq+vean6g8zEIw93B",
+      "authorship_tag": "ABX9TyNSBkABZBrWCRUDxpwqXlYh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -812,12 +812,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c8-25itrLiAM",
-        "outputId": "7c67065f-5379-4fec-d7a5-c7d747cad97e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        }
+        },
+        "id": "c8-25itrLiAM",
+        "outputId": "7c67065f-5379-4fec-d7a5-c7d747cad97e"
       },
       "source": [
         "doc(Path)"
@@ -859,12 +859,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ayPBWp7ZLmXX",
-        "outputId": "0dbdff8e-e5a0-41cb-c416-0a76d1b8aa59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "ayPBWp7ZLmXX",
+        "outputId": "0dbdff8e-e5a0-41cb-c416-0a76d1b8aa59"
       },
       "source": [
         "path = untar_data(URLs.CAMVID_TINY)\n",
@@ -903,12 +903,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TEwbelTbNhxW",
-        "outputId": "e4e3f96a-ebd0-4e14-e33e-eeb12437f79a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 344
-        }
+        },
+        "id": "TEwbelTbNhxW",
+        "outputId": "e4e3f96a-ebd0-4e14-e33e-eeb12437f79a"
       },
       "source": [
         "dls = SegmentationDataLoaders.from_label_func(\n",
@@ -1031,12 +1031,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YW1PVCymOnNA",
-        "outputId": "691e7566-2fdc-4892-f498-66500b55b31c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 523
-        }
+        },
+        "id": "YW1PVCymOnNA",
+        "outputId": "691e7566-2fdc-4892-f498-66500b55b31c"
       },
       "source": [
         "learn.show_results(max_n = 6, figsize = (7,8))"
@@ -1084,7 +1084,145 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dnN2iHxBP113"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 226
+        },
+        "id": "dnN2iHxBP113",
+        "outputId": "cec476c5-fbd2-409f-8d5c-52e44b41857e"
+      },
+      "source": [
+        "from fastai.text.all import *\n",
+        "\n",
+        "path = untar_data(URLs.IMDB)\n",
+        "dls = TextDataLoaders.from_folder(path, valid='test')\n",
+        "learn = text_classifier_learner(dls, AWD_LSTM, drop_mult=0.5, metrics=accuracy)\n",
+        "learn.fine_tune(4, 1e-2)\n",
+        "    \n"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              ""
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              ""
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: left;\">\n",
+              "      <th>epoch</th>\n",
+              "      <th>train_loss</th>\n",
+              "      <th>valid_loss</th>\n",
+              "      <th>accuracy</th>\n",
+              "      <th>time</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>0.474177</td>\n",
+              "      <td>0.401126</td>\n",
+              "      <td>0.821680</td>\n",
+              "      <td>04:01</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: left;\">\n",
+              "      <th>epoch</th>\n",
+              "      <th>train_loss</th>\n",
+              "      <th>valid_loss</th>\n",
+              "      <th>accuracy</th>\n",
+              "      <th>time</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>0.299438</td>\n",
+              "      <td>0.254229</td>\n",
+              "      <td>0.894120</td>\n",
+              "      <td>07:45</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>0.254193</td>\n",
+              "      <td>0.210098</td>\n",
+              "      <td>0.918880</td>\n",
+              "      <td>07:44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>0.183315</td>\n",
+              "      <td>0.194274</td>\n",
+              "      <td>0.926560</td>\n",
+              "      <td>07:46</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>0.140054</td>\n",
+              "      <td>0.194866</td>\n",
+              "      <td>0.928480</td>\n",
+              "      <td>07:46</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ucZG5cSlU6IS"
       },
       "source": [
         ""
